--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "dev": "nodemon main.js",
     "test": "jest"
   },
-  "keywords": ["telegram", "bot", "education"],
+  "keywords": [
+    "telegram",
+    "bot",
+    "education"
+  ],
   "author": "RB_GROUP_COMPANY",
   "license": "ISC",
   "description": "Telegram bot for Education Center 📚",
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.63.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9"
   }
 }
